--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-10 Thu 17:14]
+#+CAPTION: Clock summary at [2016-11-10 Thu 18:16]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:52* |       |      | 100.0 |
+| *Total time*                                                                | *23:50* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:52   |       |      | 100.0 |
-| Active                                                                      |         | 22:52 |      | 100.0 |
+| Stories                                                                     | 23:50   |       |      | 100.0 |
+| Active                                                                      |         | 23:50 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.0 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.9 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   8.4 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.0 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  16.3 |
-| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.8 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  43.3 |
-| STARTED Add a utility that converts a dia model into JSON                   |         |       | 3:30 |  15.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   1.9 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.7 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   8.0 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   4.8 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  15.6 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.7 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:57 |  41.7 |
+| STARTED Add a utility that converts a dia model into JSON                   |         |       | 4:25 |  18.5 |
 | STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -212,6 +212,7 @@ We should remove the annoying trailing lines in comments as it is
 causing spurious diffs with JSON.
 
 *** STARTED Make JSON yarn a fully supported frontend                 :story:
+    CLOCK: [2016-11-10 Thu 18:13]--[2016-11-10 Thu 18:16] =>  0:03
     CLOCK: [2016-11-10 Thu 12:07]--[2016-11-10 Thu 12:12] =>  0:05
     CLOCK: [2016-11-10 Thu 10:00]--[2016-11-10 Thu 11:27] =>  1:27
     CLOCK: [2016-11-09 Wed 20:45]--[2016-11-09 Wed 21:38] =>  0:53
@@ -264,6 +265,7 @@ We should have a look at the Boost Fusion approach:
 - [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
 
 *** STARTED Add a utility that converts a dia model into JSON          :epic:
+    CLOCK: [2016-11-10 Thu 17:15]--[2016-11-10 Thu 18:10] =>  0:55
     CLOCK: [2016-11-10 Thu 16:40]--[2016-11-10 Thu 17:14] =>  0:34
     CLOCK: [2016-11-10 Thu 16:23]--[2016-11-10 Thu 16:39] =>  0:16
     CLOCK: [2016-11-10 Thu 15:15]--[2016-11-10 Thu 16:22] =>  1:07
