--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-10 Thu 18:16]
+#+CAPTION: Clock summary at [2016-11-10 Thu 22:14]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *23:50* |       |      | 100.0 |
+| *Total time*                                                                | *24:35* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 23:50   |       |      | 100.0 |
-| Active                                                                      |         | 23:50 |      | 100.0 |
+| Stories                                                                     | 24:35   |       |      | 100.0 |
+| Active                                                                      |         | 24:35 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   1.9 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.7 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   8.0 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   4.8 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  15.6 |
-| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.7 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:57 |  41.7 |
-| STARTED Add a utility that converts a dia model into JSON                   |         |       | 4:25 |  18.5 |
-| STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.3 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   1.8 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.5 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   7.8 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   4.7 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  15.1 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.6 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:57 |  40.5 |
+| STARTED Add a utility that converts a dia model into JSON                   |         |       | 4:25 |  18.0 |
+| STARTED External module path for target should be in diagram                |         |       | 1:03 |   4.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -285,6 +285,7 @@ not particularly useful in UML and convert them into JSON.
 Name according to convention: tailor. General coversion tool.
 
 *** STARTED External module path for target should be in diagram      :story:
+    CLOCK: [2016-11-10 Thu 21:29]--[2016-11-10 Thu 22:14] =>  0:45
     CLOCK: [2016-11-08 Tue 15:46]--[2016-11-08 Tue 16:04] =>  0:18
 
 We should have a way to provide external module path from within the
@@ -317,7 +318,6 @@ This has a few interesting implications:
   rather than an annotation. In addition, we can do this up front
   before we process any elements so there is no need to
   update/post-process the entire model.
-
 
 *Previous Understanding*
 
