--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-10 Thu 22:41]
+#+CAPTION: Clock summary at [2016-11-10 Thu 22:52]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:00* |       |      | 100.0 |
+| *Total time*                                                                | *25:11* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:00   |       |      | 100.0 |
-| Active                                                                      |         | 25:00 |      | 100.0 |
+| Stories                                                                     | 25:11   |       |      | 100.0 |
+| Active                                                                      |         | 25:11 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   1.8 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.5 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   7.7 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.4 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   7.6 |
 | COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   4.6 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  14.9 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  14.8 |
 | COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.6 |
-| COMPLETED External module path for target should be in diagram              |         |       | 1:28 |   5.9 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:57 |  39.8 |
-| STARTED Add a utility that converts a dia model into JSON                   |         |       | 4:25 |  17.7 |
+| COMPLETED External module path for target should be in diagram              |         |       | 1:28 |   5.8 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:57 |  39.5 |
+| STARTED Add a utility that converts a dia model into JSON                   |         |       | 4:36 |  18.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -313,6 +313,7 @@ We should have a look at the Boost Fusion approach:
 - [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
 
 *** STARTED Add a utility that converts a dia model into JSON          :epic:
+    CLOCK: [2016-11-10 Thu 22:41]--[2016-11-10 Thu 22:52] =>  0:11
     CLOCK: [2016-11-10 Thu 17:15]--[2016-11-10 Thu 18:10] =>  0:55
     CLOCK: [2016-11-10 Thu 16:40]--[2016-11-10 Thu 17:14] =>  0:34
     CLOCK: [2016-11-10 Thu 16:23]--[2016-11-10 Thu 16:39] =>  0:16
@@ -331,6 +332,13 @@ JSON representation. This would allow users to take models that are
 not particularly useful in UML and convert them into JSON.
 
 Name according to convention: tailor. General coversion tool.
+
+Notes:
+
+- we need to sort objects to ensure we always get them in the same
+  order.
+
+: /home/marco/Development/DomainDrivenConsulting/dogen/build/scripts/build.linux.sh Release gcc /usr/local/personal tailor && /home/marco/Development/DomainDrivenConsulting/dogen/build/scripts/build.linux.sh Release gcc /usr/local/personal tailor_all_primitives && /home/marco/Development/DomainDrivenConsulting/dogen/build/scripts/build.linux.sh Release gcc /usr/local/personal indent_json_yarn.json_all_primitives.json
 
 *** Merge properties factory with stitching factory                   :story:
 
