--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-11 Fri 15:44]
+#+CAPTION: Clock summary at [2016-11-12 Sat 16:13]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *28:27* |       |       | 100.0 |
+| *Total time*                                                                | *28:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 28:27   |       |       | 100.0 |
-| Active                                                                      |         | 28:27 |       | 100.0 |
+| Stories                                                                     | 28:50   |       |       | 100.0 |
+| Active                                                                      |         | 28:50 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:10 |   0.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   1.6 |
 | COMPLETED Tidy-up README file                                               |         |       |  1:07 |   3.9 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       |  1:55 |   6.7 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       |  1:55 |   6.6 |
 | COMPLETED Try to fix BinTray problems                                       |         |       |  1:09 |   4.0 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       |  3:43 |  13.1 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       |  3:43 |  12.9 |
 | COMPLETED Remove trailing blank lines in comments                           |         |       |  0:39 |   2.3 |
-| COMPLETED External module path for target should be in diagram              |         |       |  1:28 |   5.2 |
-| COMPLETED Make JSON yarn a fully supported frontend                         |         |       | 10:26 |  36.7 |
-| COMPLETED Add a utility that converts a dia model into JSON                 |         |       |  6:48 |  23.9 |
-| STARTED Split yarn.json output from yarn.dia                                |         |       |  0:35 |   2.1 |
+| COMPLETED External module path for target should be in diagram              |         |       |  1:28 |   5.1 |
+| COMPLETED Make JSON yarn a fully supported frontend                         |         |       | 10:26 |  36.2 |
+| COMPLETED Add a utility that converts a dia model into JSON                 |         |       |  6:48 |  23.6 |
+| COMPLETED Split yarn.json output from yarn.dia                              |         |       |  0:58 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -347,7 +347,9 @@ Notes:
 
 : /home/marco/Development/DomainDrivenConsulting/dogen/build/scripts/build.linux.sh Release gcc /usr/local/personal tailor && /home/marco/Development/DomainDrivenConsulting/dogen/build/scripts/build.linux.sh Release gcc /usr/local/personal tailor_all_primitives && /home/marco/Development/DomainDrivenConsulting/dogen/build/scripts/build.linux.sh Release gcc /usr/local/personal indent_json_yarn.json_all_primitives.json
 
-*** STARTED Split yarn.json output from yarn.dia                      :story:
+*** COMPLETED Split yarn.json output from yarn.dia                    :story:
+    CLOSED: [2016-11-12 Sat 16:13]
+    CLOCK: [2016-11-12 Sat 15:50]--[2016-11-12 Sat 16:13] =>  0:23
     CLOCK: [2016-11-11 Fri 15:09]--[2016-11-11 Fri 15:44] =>  0:35
 
 As a quick hack we just piggy-backed on the existing yarn.dia tests
