--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,28 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-06 Tue 17:17]
+#+CAPTION: Clock summary at [2016-12-06 Tue 17:53]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *32:10* |       |      | 100.0 |
+| *Total time*                                                                | *32:45* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 32:10   |       |      | 100.0 |
-| Active                                                                      |         | 32:10 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   5.8 |
+| Stories                                                                     | 32:45   |       |      | 100.0 |
+| Active                                                                      |         | 32:45 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:51 |   5.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 1:02 |   3.2 |
 | COMPLETED Update readme                                                     |         |       | 0:11 |   0.6 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       | 0:33 |   1.7 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       | 1:04 |   3.3 |
 | COMPLETED Move project directory to output options                          |         |       | 1:10 |   3.6 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  13.5 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   3.9 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  16.4 |
-| COMPLETED Add a "language" directory for each backend                       |         |       | 5:44 |  17.8 |
-| COMPLETED Split C++ profiles and templates from C#                          |         |       | 1:11 |   3.7 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       | 4:20 |  13.2 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       | 1:15 |   3.8 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       | 5:17 |  16.1 |
+| COMPLETED Add a "language" directory for each backend                       |         |       | 5:44 |  17.5 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       | 1:11 |   3.6 |
 | COMPLETED Formatter registrar validation is not being called                |         |       | 0:20 |   1.0 |
-| STARTED Add support for C#                                                  |         |       | 7:40 |  23.8 |
-| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.7 |
+| STARTED Add support for C#                                                  |         |       | 8:15 |  25.2 |
+| STARTED Add support for Decimal numbers                                     |         |       | 0:32 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,7 @@ registrar.
 When we add this back, validation fails.
 
 *** STARTED Add support for C#                                        :story:
+    CLOCK: [2016-12-06 Tue 17:18]--[2016-12-06 Tue 17:53] =>  0:35
     CLOCK: [2016-12-06 Tue 16:19]--[2016-12-06 Tue 16:56] =>  0:37
     CLOCK: [2016-12-06 Tue 16:05]--[2016-12-06 Tue 16:18] =>  0:13
     CLOCK: [2016-12-06 Tue 11:24]--[2016-12-06 Tue 12:20] =>  0:56
@@ -356,6 +357,7 @@ Notes:
   won't work. Create either new wale templates for C# or maybe to
   start off with just hand craft the formatters until we can see a
   pattern emerging.
+- we need to figure out a way to move enablement out to quilt.
 
 Tasks:
 
